--- a/micro_mobility_exploration.ipynb
+++ b/micro_mobility_exploration.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dksr import *\n",
+    "from dksr_lib.dksr import *\n",
     "from dummy_data_generator import *"
    ]
   },
