--- a/micro_mobility_exploration.ipynb
+++ b/micro_mobility_exploration.ipynb
@@ -16,6 +16,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "help(clean_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "help(extract_sample_network)"
    ]
   },
