new folder structure

--- a/micro_mobility_MDS.ipynb
+++ b/micro_mobility_MDS.ipynb
@@ -6,8 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dksr_lib.dksr import *\n",
-    "from dummy_data_generator import *"
+    "from dksr.micro_mobility_MDS import * \n",
+    "from dksr.dummy_data_generator import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from processing import *"
    ]
   },
   {
@@ -25,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# help(extract_sample_network)"
+    "# help(trace_transform)"
    ]
   },
   {
@@ -35,6 +44,18 @@
    "outputs": [],
    "source": [
     "# help(trip_layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# explorative data analysis based on mobility data specification\n",
+    "\n",
+    "# 1. plot it \n",
+    "# 2. extract start-/ end points"
    ]
   },
   {
