stagged time windows

--- a/micro_mobility_MDS.ipynb
+++ b/micro_mobility_MDS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +79,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coordinates</th>\n",
+       "      <th>length_km</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[[13.4445381, 52.4749368], [13.4451518, 52.474...</td>\n",
+       "      <td>16.407362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[[13.3624851, 52.4813843], [13.3623879, 52.478...</td>\n",
+       "      <td>10.956792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[[13.4211299, 52.4801971], [13.4211049, 52.480...</td>\n",
+       "      <td>8.097667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[[13.4197884, 52.4963995]]</td>\n",
+       "      <td>0.033705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[[13.3352186, 52.4774154], [13.3327555, 52.476...</td>\n",
+       "      <td>13.159391</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         coordinates  length_km\n",
+       "0  [[13.4445381, 52.4749368], [13.4451518, 52.474...  16.407362\n",
+       "1  [[13.3624851, 52.4813843], [13.3623879, 52.478...  10.956792\n",
+       "2  [[13.4211299, 52.4801971], [13.4211049, 52.480...   8.097667\n",
+       "3                         [[13.4197884, 52.4963995]]   0.033705\n",
+       "4  [[13.3352186, 52.4774154], [13.3327555, 52.476...  13.159391"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping row: 3 - IllegalArgumentException: point array must contain 0 or >1 elements\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df = trace_transform(df=df, speed=15, distance_delta=0.0001)"
    ]
@@ -115,18 +193,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    }
+   ],
    "source": [
     "map = trip_layer(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LukasKoch\\anaconda3\\envs\\dksr_kgl\\lib\\site-packages\\IPython\\core\\formatters.py:365: FormatterWarning: text/html formatter returned invalid type <class 'bytes'> (expected <class 'str'>) for object: KeplerGl(data={'Trips':                                              geo_json\n",
+      "0   {'type': 'LineString', 'coordinates': [[13.444...\n",
+      "1   {'type': 'LineString', 'coordinates': [[13.362...\n",
+      "2   {'type': 'LineString', 'coordinates': [[13.421...\n",
+      "3   {'type': 'LineString', 'coordinates': [[13.335...\n",
+      "4   {'type': 'LineString', 'coordinates': [[13.407...\n",
+      "5   {'type': 'LineString', 'coordinates': [[13.452...\n",
+      "6   {'type': 'LineString', 'coordinates': [[13.388...\n",
+      "7   {'type': 'LineString', 'coordinates': [[13.335...\n",
+      "8   {'type': 'LineString', 'coordinates': [[13.337...\n",
+      "9   {'type': 'LineString', 'coordinates': [[13.340...\n",
+      "10  {'type': 'LineString', 'coordinates': [[13.348...\n",
+      "11  {'type': 'LineString', 'coordinates': [[13.335...\n",
+      "12  {'type': 'LineString', 'coordinates': [[13.336...\n",
+      "13  {'type': 'LineString', 'coordinates': [[13.426...\n",
+      "14  {'type': 'LineString', 'coordinates': [[13.423...\n",
+      "15  {'type': 'LineString', 'coordinates': [[13.431...\n",
+      "16  {'type': 'LineString', 'coordinates': [[13.425...\n",
+      "17  {'type': 'LineString', 'coordinates': [[13.395...\n",
+      "18  {'type': 'LineString', 'coordinates': [[13.421...\n",
+      "19  {'type': 'LineString', 'coordinates': [[13.425...\n",
+      "20  {'type': 'LineString', 'coordinates': [[13.436...\n",
+      "21  {'type': 'LineString', 'coordinates': [[13.362...\n",
+      "22  {'type': 'LineString', 'coordinates': [[13.436...\n",
+      "23  {'type': 'LineString', 'coordinates': [[13.372...\n",
+      "24  {'type': 'LineString', 'coordinates': [[13.421...\n",
+      "25  {'type': 'LineString', 'coordinates': [[13.330...\n",
+      "26  {'type': 'LineString', 'coordinates': [[13.420...\n",
+      "27  {'type': 'LineString', 'coordinates': [[13.345...\n",
+      "28  {'type': 'LineString', 'coordinates': [[13.331...\n",
+      "29  {'type': 'LineString', 'coordinates': [[13.337...\n",
+      "30  {'type': 'LineString', 'coordinates': [[13.440...\n",
+      "31  {'type': 'LineString', 'coordinates': [[13.424...\n",
+      "32  {'type': 'LineString', 'coordinates': [[13.368...\n",
+      "33  {'type': 'LineString', 'coordinates': [[13.347...\n",
+      "34  {'type': 'LineString', 'coordinates': [[13.351...\n",
+      "35  {'type': 'LineString', 'coordinates': [[13.331...\n",
+      "36  {'type': 'LineString', 'coordinates': [[13.354...\n",
+      "37  {'type': 'LineString', 'coordinates': [[13.425...\n",
+      "38  {'type': 'LineString', 'coordinates': [[13.442...\n",
+      "39  {'type': 'LineString', 'coordinates': [[13.379...\n",
+      "40  {'type': 'LineString', 'coordinates': [[13.376...\n",
+      "41  {'type': 'LineString', 'coordinates': [[13.423...\n",
+      "42  {'type': 'LineString', 'coordinates': [[13.398...\n",
+      "43  {'type': 'LineString', 'coordinates': [[13.418...\n",
+      "44  {'type': 'LineString', 'coordinates': [[13.349...\n",
+      "45  {'type': 'LineString', 'coordinates': [[13.421...\n",
+      "46  {'type': 'LineString', 'coordinates': [[13.444...\n",
+      "47  {'type': 'LineString', 'coordinates': [[13.379...\n",
+      "48  {'type': 'LineString', 'coordinates': [[13.450...}, height=800)\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b5640ada56b4c0b8228a9dfc36bc55f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'Trips':                                              geo_json\n",
+       "0   {'type': 'LineString', 'coor…"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#plot and style your map\n",
     "map"
